# hugure

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  env.example  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: freedom.md  homo-habits.md  structure.md
hugure-applications/: Cargo.toml
hugure-applications/src/: lib.rs
hugure-consciousness/: Cargo.toml
hugure-consciousness/src/: agency_delusion.rs  bmd_operation.rs  consciousness_enhancement.rs  frame_selection.rs  lib.rs  main.rs  memory_fabrication.rs  reality_fusion.rs  temporal_coherence.rs
hugure-core/: Cargo.toml
hugure-core/src/: error.rs  lib.rs  main.rs  memory_optimization.rs  navigation.rs  observer_process.rs  s_entropy.rs  s_entropy_endpoints.rs  s_knowledge.rs  s_time.rs  traits.rs  types.rs  universal_transformer.rs
hugure-entropy-solver/: Cargo.toml
hugure-entropy-solver/src/: lib.rs  main.rs
hugure-frameworks/: Cargo.toml
hugure-frameworks/src/: lib.rs
hugure-integration/: Cargo.toml
hugure-integration/src/: lib.rs
hugure-utils/: Cargo.toml
hugure-utils/src/: lib.rs
hugure-validation/: Cargo.toml
hugure-validation/src/: lib.rs  main.rs
src/: bmd.rs  lib.rs  main.rs
