[package]
name = "hugure"
version = "0.1.0"
edition = "2021"
description = "BMD-Based Identity Exploration for Zero-Message Instant Communication"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
nalgebra = "0.32"
ndarray = "0.15"
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[lib]
name = "hugure"
path = "src/lib.rs"

[[bin]]
name = "hugure"
path = "src/main.rs" 