[workspace]
members = [
    "hugure-core",
    "hugure-consciousness", 
    "hugure-entropy-solver",
    "hugure-frameworks",
    "hugure-integration",
    "hugure-applications",
    "hugure-validation",
    "hugure-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kundai Farai Sachikonye <kundai@hugure.dev>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/kundai/hugure"
homepage = "https://hugure.dev"
documentation = "https://docs.hugure.dev"
description = "S-Enhanced Biological Maxwell Demon Orchestration Framework for Bidirectional Cognitive Pattern Optimization"
keywords = ["s-entropy", "bmd", "consciousness", "quantum-computing", "ai-enhancement"]
categories = ["science", "algorithms", "mathematics", "simulation"]

[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.8"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Mathematical and scientific computing
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
statrs = "0.16"
approx = "0.5"

# Machine learning and AI
candle-core = "0.3"
candle-nn = "0.3"

# Time and temporal precision
chrono = { version = "0.4", features = ["serde"] }
instant = "0.1"

# Networking and communication
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.10"
prost = "0.12"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
prometheus = "0.13"

# Configuration and environment
config = "0.13"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and security
ring = "0.17"
argon2 = "0.5"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Memory management and optimization
jemalloc-sys = "0.5"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI and interface
clap = { version = "4.4", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true

# S-Entropy specific feature flags
[workspace.metadata.hugure]
s-entropy-precision = "ultra-high"
consciousness-integration = true
quantum-computing-support = true
temporal-precision-target = "1e-30"
memorial-significance = "st-stella-lorraine"

# Feature combinations for different deployment scenarios
[workspace.metadata.features]
default = ["standard"]
standard = ["tokio", "serde", "nalgebra", "tracing"]
quantum = []
performance = ["jemalloc-sys", "rayon"]
full = ["quantum", "performance"] 