[package]
name = "hugure-applications"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "S-Entropy Applications - Domain-specific implementations for quantum computing, AI, and scientific discovery"
keywords = ["applications", "quantum-computing", "ai-enhancement", "scientific-discovery"]
categories = ["science", "applications"]

[dependencies]
hugure-core = { path = "../hugure-core" }
hugure-consciousness = { path = "../hugure-consciousness" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true } 